discussion/kv_engine/144480/144480_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20640: move phosphor trace config to memcached.json

Allow for setting the phosphor configuration in memcached.json
via a tag named phosphor_config which use the format specified
for TraceConfig.

The default configuration looks like:

    buffer-mode:ring;buffer-size:20971520;enabled-categories:*

Note that if one tries to change the configuration via settings
you would need to stop and start phosphor tracing via IOCTL
commands in order for it to take effect.

Change-Id: I8f9ecde1eac53437e6f96b4a25d65e09380d5b0e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-02-04 12:04:54.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-04 12:21:57.000000000
Message: 
Patch Set 12: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6921/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/tracing.cc:35:2: error: expected ";" after top level declarator [clang-diagnostic-error]
}
 ^
 ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6921/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/tracing.cc:35:2:
error: expected ";" after top level declarator [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6921/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33383/ : FAILURE

Compile error at ..\kv_engine\daemon\tracing.cc(36): error C2144: syntax error: "std::mutex" should be preceded by ";" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33383/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28718/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/tracing.cc:35:2:
error: expected ";" after top level declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28718/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7554/ : FAILURE

Compile error at [2021-02-04T12:13:26.357Z] ../kv_engine/daemon/tracing.cc:35:2:
error: expected ";" after top level declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7554/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8489/ : FAILURE

Compile error at [2021-02-04T12:11:07.792Z] ../kv_engine/daemon/tracing.cc:36:1:
error: expected ?,? or ?;? before ?static?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8489/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8623/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8623/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8847/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8847/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16395/ : FAILURE

Compile error at [2021-02-04T12:13:33.621Z] ../kv_engine/daemon/tracing.cc:35:2:
error: expected ";" after top level declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16395/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5458/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
